сверстал sidebar content

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+.slick-active {
+  outline: none !important;
+}
+
 html {
   font-size: 14px;
 }
@@ -7,6 +11,33 @@ body {
   color: #131313;
   font-family: 'Roboto', sans-serif;
   padding-top: 40px;
+}
+
+a {
+  color: #009adf;
+}
+
+h2 {
+  font-size: 24px;
+}
+
+.btn {
+  padding: 20px 30px;
+  display: inline-block;
+  color: #ffffff;
+  border-radius: 5px;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.btn-primary {
+  background-color: #009adf;
+  border-bottom: 5px solid #0077ac;
+}
+
+.btn-primary:hover {
+  background-color: #00a1e9;
 }
 
 .top-nav {
@@ -48,5 +79,88 @@ body {
 .top-nav_menu li a:hover::after {
   -webkit-transform: translateY(30px) scale(1);
           transform: translateY(30px) scale(1);
+}
+
+.left-sidebar {
+  margin-top: 40px;
+}
+
+.left-sidebar_menu {
+  background-color: #fff;
+  list-style: none;
+  padding: 0;
+}
+
+.left-sidebar_menu li {
+  -webkit-transition: all 0.1s;
+  transition: all 0.1s;
+}
+
+.left-sidebar_menu li:first-child a {
+  padding-top: 20px;
+}
+
+.left-sidebar_menu li:last-child a {
+  padding-bottom: 20px;
+}
+
+.left-sidebar_menu li:hover {
+  background-color: #009adf;
+}
+
+.left-sidebar_menu li:hover a {
+  color: #ffffff;
+}
+
+.left-sidebar_menu a {
+  display: block;
+  padding: 15px 29px;
+  text-decoration: none;
+  color: #131313;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.left-sidebar_object {
+  background-color: #ffffff;
+  margin-top: 30px;
+}
+
+.left-sidebar_object img {
+  width: 100%;
+}
+
+.left-sidebar_object-description {
+  padding: 30px;
+}
+
+.left-sidebar_object-description h3 {
+  text-transform: uppercase;
+  font-weight: 400;
+}
+
+.content {
+  margin-top: 40px;
+}
+
+.directions {
+  margin-top: 80px;
+}
+
+.directions-block {
+  background-color: #ffffff;
+  height: 220px;
+  text-align: center;
+  padding: 10px;
+  background-position: bottom center;
+  background-repeat: no-repeat;
+}
+
+.directions-block h3 {
+  color: #009adf;
+}
+
+.slick-slide {
+  margin: 0 15px;
 }
 /*# sourceMappingURL=style.css.map */
