--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,3 +1,6 @@
 @import 'colors'
+@import 'reset'
 @import 'main'
 @import 'blocks/top-nav'
+@import 'blocks/left-sidebar'
+@import 'blocks/content'
