--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,8 @@
 @import 'colors'
 @import 'reset'
+@import 'fontello'
 @import 'main'
 @import 'blocks/top-nav'
 @import 'blocks/left-sidebar'
 @import 'blocks/content'
+@import 'blocks/footer'
