--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,75 @@
+@charset "UTF-8";
 .slick-active {
   outline: none !important;
 }
 
+@font-face {
+  font-family: 'fontello';
+  src: url("../fonts/fontello.eot?62690674");
+  src: url("../fonts/fontello.eot?62690674#iefix") format("embedded-opentype"), url("../fonts/fontello.woff2?62690674") format("woff2"), url("../fonts/fontello.woff?62690674") format("woff"), url("../fonts/fontello.ttf?62690674") format("truetype"), url("../fonts/fontello.svg?62690674#fontello") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
+/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+/*
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  @font-face {
+    font-family: 'fontello';
+    src: url('../font/fontello.svg?62690674#fontello') format('svg');
+  }
+}
+*/
+[class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "fontello";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  /* opacity: .8; */
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: .2em;
+  /* you can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+  /* Font smoothing. That was taken from TWBS */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+}
+
+.icon-facebook:before {
+  content: '\f09a';
+}
+
+/* '' */
+.icon-instagram:before {
+  content: '\f16d';
+}
+
+/* '' */
+.icon-vkontakte:before {
+  content: '\f189';
+}
+
+/* '' */
 html {
   font-size: 14px;
 }
 
 body {
+  margin: 0;
   background-color: #eef3f5;
   color: #131313;
   font-family: 'Roboto', sans-serif;
@@ -162,5 +225,78 @@ h2 {
 
 .slick-slide {
   margin: 0 15px;
+}
+
+.footer {
+  margin-top: 60px;
+  background-color: #131313;
+  padding: 59px 0;
+  color: #666666;
+}
+
+.footer-policy-link {
+  font-size: 12px;
+}
+
+.footer p {
+  margin-bottom: 14px;
+}
+
+.footer a {
+  color: #666666;
+  text-decoration: none;
+}
+
+.footer a:hover {
+  color: #ffffff;
+}
+
+.footer small {
+  display: block;
+  margin-top: 56px;
+  line-height: 16px;
+  font-size: 10px;
+  max-width: 80%;
+}
+
+.footer ul {
+  padding: 0;
+  list-style: none;
+}
+
+.footer ul li {
+  line-height: 32px;
+}
+
+.footer-contacts, .footer-social-links {
+  text-align: right;
+}
+
+.footer-contacts_phone {
+  font-weight: 400;
+  font-size: 20px;
+  color: #009adf;
+}
+
+.footer-social-links li {
+  display: inline-block;
+}
+
+.footer-social-links li a {
+  display: inline-block;
+  width: 42px;
+  height: 42px;
+  background-color: rgba(255, 255, 255, 0.1);
+  text-align: center;
+  border-radius: 50%;
+  line-height: 42px;
+  margin-left: 10px;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.footer-social-links li a:hover {
+  background-color: rgba(255, 255, 255, 0.9);
+  color: #131313;
 }
 /*# sourceMappingURL=style.css.map */
