--- a/sass/blocks/_left-sidebar.sass
+++ b/sass/blocks/_left-sidebar.sass
@@ -28,7 +28,7 @@
     background-color: $white
     margin-top: 30px
     img
-      max-width: 100%
+      width: 100%
     &-description
       padding: 30px
       h3
