--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 @font-face {
   font-family: 'fontello';
-  src: url("../fonts/fontello.eot?62690674");
-  src: url("../fonts/fontello.eot?62690674#iefix") format("embedded-opentype"), url("../fonts/fontello.woff2?62690674") format("woff2"), url("../fonts/fontello.woff?62690674") format("woff"), url("../fonts/fontello.ttf?62690674") format("truetype"), url("../fonts/fontello.svg?62690674#fontello") format("svg");
+  src: url("../fonts/fontello.eot?3218871");
+  src: url("../fonts/fontello.eot?3218871#iefix") format("embedded-opentype"), url("../fonts/fontello.woff2?3218871") format("woff2"), url("../fonts/fontello.woff?3218871") format("woff"), url("../fonts/fontello.ttf?3218871") format("truetype"), url("../fonts/fontello.svg?3218871#fontello") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -13,7 +13,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?62690674#fontello') format('svg');
+    src: url('../font/fontello.svg?3218871#fontello') format('svg');
   }
 }
 */
@@ -50,6 +50,11 @@
 }
 
 /* '' */
+.icon-menu:before {
+  content: '\f0c9';
+}
+
+/* '' */
 .icon-instagram:before {
   content: '\f16d';
 }
