--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@
 
 @font-face {
   font-family: 'fontello';
-  src: url("../fonts/fontello.eot?62690674");
-  src: url("../fonts/fontello.eot?62690674#iefix") format("embedded-opentype"), url("../fonts/fontello.woff2?62690674") format("woff2"), url("../fonts/fontello.woff?62690674") format("woff"), url("../fonts/fontello.ttf?62690674") format("truetype"), url("../fonts/fontello.svg?62690674#fontello") format("svg");
+  src: url("../fonts/fontello.eot?3218871");
+  src: url("../fonts/fontello.eot?3218871#iefix") format("embedded-opentype"), url("../fonts/fontello.woff2?3218871") format("woff2"), url("../fonts/fontello.woff?3218871") format("woff"), url("../fonts/fontello.ttf?3218871") format("truetype"), url("../fonts/fontello.svg?3218871#fontello") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -17,7 +17,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?62690674#fontello') format('svg');
+    src: url('../font/fontello.svg?3218871#fontello') format('svg');
   }
 }
 */
@@ -54,6 +54,11 @@
 }
 
 /* '' */
+.icon-menu:before {
+  content: '\f0c9';
+}
+
+/* '' */
 .icon-instagram:before {
   content: '\f16d';
 }
@@ -65,10 +70,11 @@
 
 /* '' */
 html {
-  font-size: 14px;
+  font-size: 10px;
 }
 
 body {
+  font-size: 14px;
   margin: 0;
   background-color: #eef3f5;
   color: #131313;
@@ -106,6 +112,23 @@ h2 {
 .top-nav {
   background-color: #ffffff;
   padding: 15px;
+  position: relative;
+}
+
+.top-nav_btn {
+  display: none;
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  border: none;
+  font-size: 18px;
+  position: absolute;
+  right: 15px;
+  top: -50px;
+}
+
+.top-nav_btn:hover {
+  cursor: pointer;
 }
 
 .top-nav_menu {
@@ -145,7 +168,33 @@ h2 {
 }
 
 .left-sidebar {
-  margin-top: 40px;
+  margin-top: 4rem;
+}
+
+.left-sidebar_btn {
+  display: none;
+  background-color: #ffffff;
+  padding: 15px;
+  position: relative;
+}
+
+.left-sidebar_btn:hover {
+  cursor: pointer;
+}
+
+.left-sidebar_btn::after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  margin-top: -10px;
+  right: 15px;
+  width: 15px;
+  height: 15px;
+  border-bottom: 2px solid #131313;
+  border-right: 2px solid #131313;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
 
 .left-sidebar_menu {
@@ -298,5 +347,53 @@ h2 {
 .footer-social-links li a:hover {
   background-color: rgba(255, 255, 255, 0.9);
   color: #131313;
+}
+
+@media (max-width: 480px) {
+  html {
+    font-size: 5px;
+  }
+  .top-nav_btn {
+    display: block;
+  }
+  .top-nav_menu {
+    display: none;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .top-nav_menu__active {
+    display: block;
+    margin-bottom: 0;
+  }
+  .top-nav_menu li {
+    line-height: 2;
+  }
+  .top-nav_menu li a::after {
+    display: none;
+  }
+  .left-sidebar_btn {
+    display: block;
+  }
+  .left-sidebar_menu {
+    display: none;
+  }
+  .left-sidebar_menu__active {
+    display: block;
+  }
+  .left-sidebar_object {
+    display: none;
+  }
+  .copy {
+    text-align: center;
+  }
+  .copy small {
+    display: block;
+    margin: 35px auto;
+  }
+  .footer-contacts, .footer-social-links {
+    text-align: left;
+  }
 }
 /*# sourceMappingURL=style.css.map */
