--- a/sass/blocks/_left-sidebar.sass
+++ b/sass/blocks/_left-sidebar.sass
@@ -1,6 +1,24 @@
 .left-sidebar
-  margin-top: 40px
- 
+  margin-top: 4rem
+  &_btn
+    display: none
+    background-color: $white
+    padding: 15px
+    position: relative
+    &:hover
+      cursor: pointer
+    &::after
+      content: ''
+      display: inline-block
+      position: absolute
+      top: 50%
+      margin-top: -10px
+      right: 15px
+      width: 15px
+      height: 15px
+      border-bottom: 2px solid $dark
+      border-right: 2px solid $dark
+      transform: rotate(45deg)
   &_menu
     background-color: #fff
     list-style: none
