--- a/sass/blocks/_top-nav.sass
+++ b/sass/blocks/_top-nav.sass
@@ -1,6 +1,19 @@
 .top-nav
   background-color: $white
   padding: 15px
+  position: relative
+  &_btn
+    display: none
+    width: 30px
+    height: 30px
+    background-color: transparent
+    border: none
+    font-size: 18px
+    position: absolute
+    right: 15px
+    top: -50px
+    &:hover
+      cursor: pointer
   &_menu
     list-style: none
     padding: 0
