--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,4 +1,4 @@
-@media (max-width: 480px)
+@media (max-width: 767px)
   html
     font-size: 5px
   .top-nav
@@ -16,19 +16,41 @@
           &::after
             display: none
   .left-sidebar
+    &_object
+      display: none
     &_btn
       display: block
     &_menu
       display: none
       &__active
         display: block
-    &_object
-      display: none
   .copy
     text-align: center
     small
       display: block
       margin: 35px auto
+  .footer
+    &-contacts
+      text-align: left
+
+@media (max-width: 991px)
+  html
+    font-size: 5px
+  .top-nav
+    &_btn
+      display: block
+    &_menu
+      display: none
+      &__active
+        display: flex
+        margin-bottom: 0
+        justify-content: space-around
+      li
+        margin-right: 0
+        line-height: 2
+        a
+          &::after
+            display: none
   .footer
     &-contacts
       text-align: left
