--- a/sass/blocks/_top-nav.sass
+++ b/sass/blocks/_top-nav.sass
@@ -11,15 +11,16 @@
     font-size: 18px
     position: absolute
     right: 15px
-    top: -50px
+    top: -23px
     &:hover
       cursor: pointer
   &_menu
     list-style: none
     padding: 0
     display: flex
+    justify-content: space-around
     li
-      margin-right: 45px
+      // margin-right: 45px
       a
         text-transform: uppercase
         text-decoration: none
