сделал блоки about, contacts, organization

--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ h2 {
 
 .top-nav {
   background-color: #ffffff;
-  padding: 15px;
+  padding: 15px 34px;
   position: relative;
 }
 
@@ -140,13 +140,21 @@ h2 {
 }
 
 .top-nav_menu {
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
   list-style: none;
   padding: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+}
+
+.top-nav_menu li {
+  margin-right: 45px;
+}
+
+.top-nav_menu li:last-child {
+  margin-right: 0;
 }
 
 .top-nav_menu li a {
@@ -193,10 +201,10 @@ h2 {
   display: inline-block;
   position: absolute;
   top: 50%;
-  margin-top: -10px;
-  right: 15px;
-  width: 15px;
-  height: 15px;
+  margin-top: -8px;
+  right: 21px;
+  width: 12px;
+  height: 12px;
   border-bottom: 2px solid #131313;
   border-right: 2px solid #131313;
   -webkit-transform: rotate(45deg);
@@ -259,6 +267,7 @@ h2 {
 
 .content {
   margin-top: 40px;
+  margin-bottom: 76px;
 }
 
 .directions {
@@ -355,6 +364,96 @@ h2 {
   color: #131313;
 }
 
+.team {
+  text-align: center;
+}
+
+.team h4 {
+  font-size: 18px;
+  font-weight: 400;
+  margin-bottom: 15px;
+}
+
+.team p {
+  margin-bottom: 40px;
+}
+
+.contacts {
+  font-size: 16px;
+}
+
+.contacts-img {
+  margin-right: 12px;
+  vertical-align: middle;
+}
+
+.contacts-address {
+  display: block;
+  line-height: 2;
+}
+
+.contacts-btn {
+  margin-top: 35px;
+}
+
+.contacts-social-links ul {
+  list-style: none;
+  margin-top: 35px;
+  padding: 0;
+}
+
+.contacts-social-links ul li {
+  display: inline-block;
+}
+
+.contacts-social-links ul li a {
+  display: inline-block;
+  background-color: #009adf;
+  color: #ffffff;
+  margin-right: 15px;
+  width: 32px;
+  height: 32px;
+  text-align: center;
+  line-height: 32px;
+  border-radius: 50%;
+}
+
+.organization-card {
+  background-color: #ffffff;
+  margin-bottom: 30px;
+  min-height: 43rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 25px 30px;
+}
+
+.organization-card:hover {
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 1, 0.1);
+          box-shadow: 0 5px 10px rgba(0, 0, 1, 0.1);
+}
+
+.organization-card a {
+  text-transform: uppercase;
+  text-decoration: none;
+  display: block;
+  margin-bottom: 20px;
+}
+
+.organization-card small {
+  display: block;
+  color: rgba(19, 19, 19, 0.5);
+  line-height: 1.5;
+}
+
+.organization-card p {
+  line-height: 22px;
+}
+
 @media (max-width: 767px) {
   html {
     font-size: 5px;
@@ -370,7 +469,9 @@ h2 {
             flex-direction: column;
   }
   .top-nav_menu__active {
-    display: block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     margin-bottom: 0;
   }
   .top-nav_menu li {
@@ -407,6 +508,9 @@ h2 {
   html {
     font-size: 5px;
   }
+  .top-nav {
+    padding: 15px;
+  }
   .top-nav_btn {
     display: block;
   }
@@ -427,6 +531,18 @@ h2 {
   }
   .top-nav_menu li a::after {
     display: none;
+  }
+  .left-sidebar_object {
+    display: none;
+  }
+  .left-sidebar_btn {
+    display: block;
+  }
+  .left-sidebar_menu {
+    display: none;
+  }
+  .left-sidebar_menu__active {
+    display: block;
   }
   .footer-contacts, .footer-social-links {
     text-align: left;
