--- a/sass/index/_content.sass
+++ b/sass/index/_content.sass
@@ -1,5 +1,6 @@
 .content
   margin-top: 40px
+  margin-bottom: 76px
 .directions
   margin-top: 80px
   &-block
@@ -13,3 +14,4 @@
       color: $active-color
 .slick-slide
   margin: 0 15px
+  // max-width: 100px
