--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,8 +2,11 @@
 @import 'reset'
 @import 'fontello'
 @import 'main'
-@import 'blocks/top-nav'
-@import 'blocks/left-sidebar'
-@import 'blocks/content'
-@import 'blocks/footer'
+@import 'index/top-nav'
+@import 'index/left-sidebar'
+@import 'index/content'
+@import 'index/footer'
+@import 'about/team'
+@import 'contacts/contacts'
+@import 'organization/organization'
 @import 'media'
