--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -8,7 +8,7 @@
       display: none
       flex-direction: column
       &__active
-        display: block
+        display: flex
         margin-bottom: 0
       li
         line-height: 2
@@ -37,6 +37,7 @@
   html
     font-size: 5px
   .top-nav
+    padding: 15px
     &_btn
       display: block
     &_menu
@@ -51,6 +52,15 @@
         a
           &::after
             display: none
+  .left-sidebar
+    &_object
+      display: none
+    &_btn
+      display: block
+    &_menu
+      display: none
+      &__active
+        display: block
   .footer
     &-contacts
       text-align: left
